--- a/RazorWorks/Views/Home/Index.cshtml
+++ b/RazorWorks/Views/Home/Index.cshtml
@@ -1,16 +1,8 @@
 ﻿@model Product
 
 @{ 
-  Layout = null;
+  Layout = "_BasicLayout";
+  ViewBag.Title = "Product Name";
 }
 
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Index</title>
-</head>
-<body>
-  @Model.Name
-</body>
-</html>
+Product Name: @Model.Name
