--- a/RazorWorks/Views/Home/Index.cshtml
+++ b/RazorWorks/Views/Home/Index.cshtml
@@ -4,4 +4,8 @@
   ViewBag.Title = "Product Name";
 }
 
-Product Name: @Model.Name
+<div data-productid="@Model.ProductID" data-stocklevel="@ViewBag.Stocklevel">
+  <p>Product Name: @Model.Name</p>
+  <p>Product Price: @($"{Model.Price:C2}")</p>
+  <p>Stock Level: @ViewBag.StockLevel</p>
+</div>
