--- a/RazorWorks/Views/Home/Index.cshtml
+++ b/RazorWorks/Views/Home/Index.cshtml
@@ -7,5 +7,16 @@
 <div data-productid="@Model.ProductID" data-stocklevel="@ViewBag.Stocklevel">
   <p>Product Name: @Model.Name</p>
   <p>Product Price: @($"{Model.Price:C2}")</p>
-  <p>Stock Level: @ViewBag.StockLevel</p>
+  <p>Stock Level: 
+    @if (ViewBag.StockLevel == 0) {
+      @: Out of Stock
+    }
+    else if (ViewBag.StockLevel > 0 && ViewBag.StockLevel <= 3) {
+      <b>Low Stock (@ViewBag.StockLevel)</b>
+    }
+    else {
+      @: @ViewBag.StockLevel in Stock
+
+    }
+  </p>
 </div>
