Used razor foreach expression to iteratively display an array Model.

--- a/RazorWorks/Views/Home/Index.cshtml
+++ b/RazorWorks/Views/Home/Index.cshtml
@@ -1,22 +1,20 @@
-﻿@model Product
+﻿@model Product[]
 
 @{   
   ViewBag.Title = "Product Name";
 }
 
-<div data-productid="@Model.ProductID" data-stocklevel="@ViewBag.Stocklevel">
-  <p>Product Name: @Model.Name</p>
-  <p>Product Price: @($"{Model.Price:C2}")</p>
-  <p>Stock Level: 
-    @if (ViewBag.StockLevel == 0) {
-      @: Out of Stock
-    }
-    else if (ViewBag.StockLevel > 0 && ViewBag.StockLevel <= 3) {
-      <b>Low Stock (@ViewBag.StockLevel)</b>
-    }
-    else {
-      @: @ViewBag.StockLevel in Stock
+<table>
+  <thead>
+    <tr><th>Name</th><th>Price</th></tr>
+  </thead>
+  <tbody>
+    @foreach (Product p in Model) {
+      <tr>
+        <td>@p.Name</td>
+        <td>@($"{p.Price:C2}")</td>
+      </tr>
 
     }
-  </p>
-</div>
+  </tbody>
+</table>
